--- a/views/super/template.ejs
+++ b/views/super/template.ejs
@@ -106,7 +106,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student Edit</title>
+    <title>Admin Edit</title>
   </head>
 
   <body>
@@ -119,7 +119,7 @@
         left:350px;
         border-radius: 10px;
         width:150px;"
-        onclick="window.location.href = '/admin/admin_portal';">
+        onclick="window.location.href = '/super/portal';">
         Go Back
       </button>
 
@@ -129,9 +129,9 @@
           <tbody>
             
           <tr>
-          <td id="label">First Name</td>
+          <td id="label"></td>
           <td>
-              <input type="text" value="<%=f_name%>" name="f_name" required />
+
           </td>
           </tr>
           
