--- a/views/super/admin_add.ejs
+++ b/views/super/admin_add.ejs
@@ -1,55 +1,205 @@
 <!DOCTYPE html>
+
+<style>
+
+  button, .bt {
+    box-shadow: 0px 5px 0px 0px #282828;
+    background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+    background-color:#ebdbb2;
+    border-radius:15px;
+    border:2px solid #282828;
+    cursor:pointer;
+    color:#32302f;
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding:12px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    width: 200px;
+  }
+  button, .bt:hover {
+    background:linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+    background-color:#ebdbb2;
+  }
+
+  input[type=text] {
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding: 12px 16px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color:#32302f;
+    border:1px solid #ebdbb2;
+    color: #ebdbb2;
+    border-radius:20px;
+    width: 400px;
+
+  }
+
+  form{
+    margin-top: 0px;
+    margin-left: 300px;
+  }
+
+  #dashboard{
+    margin-top: 50px;
+    margin-left: 30px;
+    width: 1000px;
+    height: 600px;
+    padding: 10px;
+    border: 2px solid #ebdbb2;
+    border-radius: 15px;
+    background-color: #282828;
+    overflow-y:auto;
+  }
+
+  #photo{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+  #info{ 
+    font-family: 'Montserrat';
+    font-size:20px;
+    width:200px;
+    height: 100px; 
+    margin-top: 0; 
+    margin-left: 0;
+  }
+
+  #label{
+    font-size:20px;
+    font-weight: 600;
+  }
+
+  td{
+    min-width: 150px;
+    padding: 0px 20px 0px 20px;
+  }
+
+  input{
+    text-align: center;
+  }
+
+  tr#label:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  bt{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+</style>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Add</title>
   </head>
 
-  <body style="color: white;">
-    <!-- Admin id -->
-    <p>Admin id: <%=admin_id%></p>
-    <!-- Other Info -->
-    <form action="./admin_add" method="POST">
-      <label for="f_name">
-        First Name:
-        <input type="text" name="f_name" placeholder="First Name" required />
-      </label>
-      <label for="m_name">
-        Middle Name:
-        <input type="text" name="m_name" value="" placeholder="Middle Name" />
-      </label>
-      <label for="l_name">
-        Last Name:
-        <input type="text" name="l_name" placeholder="Last Name" required />
-      </label>
-      <label for="post">
-        Post: <input type="text" name="post" placeholder="Post" required />
-      </label>
-      <label for="phone">
-        Phone: <input type="text" name="phone" placeholder="Phone" required />
-      </label>
-      <label for="Email">
-        E-Mail: <input type="text" name="Email" placeholder="E-Mail" required />
-      </label>
-      <button type="submit">SUBMIT</button>
-    </form>
-    <button
-      style="
-        background-color: #282828;
-        border: 1px solid #fabd2f;
-        color: #ebdbb2;
-        padding: 20px 20px;
-        text-align: center;
-        font-size: 20px;
-        position: absolute;
-        top: 50px;
-        left: 80px;
+  <body>
+    <div id="dashboard">
+
+      <button 
+        style=
+        "position: absolute;
+        top:80px;
+        left:350px;
         border-radius: 10px;
-      "
-      onclick="window.location.href = '/super/portal';"
-    >
-      Back
-    </button>
+        width:150px;"
+        onclick="window.location.href = '/super/portal';">
+        Go Back
+      </button>
+
+      <div id="info"  style="float:none">
+      <form action="./admin_add" method="POST">
+        <table border="0" cellpadding="15">
+          <tbody>
+          
+          <tr>
+            <td id="label">Admin ID</td>
+            <td>
+              <label for="admin_id">
+                <input disabled type="text" value="<%=admin_id%>" name="admin_id" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">First Name</td>
+            <td>
+              <label for="f_name">
+                <input type="text" value="<%=f_name%>" name="f_name" required />
+              </label>
+            </td>
+          </tr>
+            
+          <tr>
+            <td id="label">Middle Name</td>
+            <td>
+              <label for="m_name">
+                <input type="text" value="<%=m_name%>" name="m_name" />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">Last Name</td>
+            <td>
+              <label for="l_name">
+                <input type="text" value="<%=l_name%>" name="l_name" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">Post</td>
+            <td>
+              <label for="post">
+                <input type="text" value="<%=post%>" name="post" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">Phone</td>
+            <td>
+              <label for="phone">
+                <input type="text" value="<%=phone%>" name="phone" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">Email</td>
+            <td>
+              <label for="Email">
+                <input type="text" value="<%=Email%>" name="Email" required />
+              </label>
+            </td>
+          </tr>
+          <tr>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+            </td>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+              <button type="submit">Save</button>
+            </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
   </body>
 </html>
