--- a/views/super/s_time_table.ejs
+++ b/views/super/s_time_table.ejs
@@ -1,74 +1,244 @@
 <!DOCTYPE html>
+
+<style>
+
+  button, .bt {
+    box-shadow: 0px 5px 0px 0px #282828;
+    background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+    background-color:#ebdbb2;
+    border-radius:15px;
+    border:2px solid #282828;
+    cursor:pointer;
+    color:#32302f;
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding:12px 20px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    width: 200px;
+  }
+  button, .bt:hover {
+    background:linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+    background-color:#ebdbb2;
+  }
+
+  input[type=text] {
+    font-family: 'Montserrat';
+    font-size:20px;
+    padding: 12px 16px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color:#32302f;
+    border:1px solid #ebdbb2;
+    color: #ebdbb2;
+    border-radius:20px;
+    width: 400px;
+
+  }
+
+  form{
+    margin-top: 0px;
+    margin-left: 300px;
+  }
+
+  #dashboard{
+    margin-top: 50px;
+    margin-left: 30px;
+    width: 1000px;
+    height: 600px;
+    padding: 10px;
+    border: 2px solid #ebdbb2;
+    border-radius: 15px;
+    background-color: #282828;
+    overflow-y:auto;
+  }
+
+  #photo{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+  #info{ 
+    font-family: 'Montserrat';
+    font-size:20px;
+    width:200px;
+    height: 100px; 
+    margin-top: 0; 
+    margin-left: 0;
+  }
+
+  #label{
+    font-size:20px;
+    font-weight: 600;
+  }
+
+  td{
+    min-width: 150px;
+    padding: 0px 20px 0px 20px;
+  }
+
+  input{
+    text-align: center;
+  }
+
+  tr#label:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  bt{
+    width: 200px; 
+    height: 200px; 
+    margin-top: 125px; 
+    margin-left: 60px;
+    border-radius: 15px;
+  }
+
+</style>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Time Table Edit</title>
   </head>
 
-  <body style="color: white;">
-    <!-- Serial No. -->
-    <p>Serial No.: <%=s_no%></p>
-    <!-- Other Info -->
-    <form action="./s_time_table" method="POST">
-      <label for="batch_code">
-        Batch Code:
-        <input type="text" value="<%=batch_code%>" name="batch_code" required />
-      </label>
-      <label for="day">
-        Day:
-        <input type="text" value="<%=day%>" name="day" required />
-      </label>
-      <label for="t_9">
-        09:00 - 10:00:
-        <input type="text" value="<%=t_9%>" name="t_9" required />
-      </label>
-      <label for="t_10">
-        10:00 - 11:00:
-        <input type="text" value="<%=t_10%>" name="t_10" required />
-      </label>
-      <label for="t_11">
-        11:00 - 12:00:
-        <input type="text" value="<%=t_11%>" name="t_11" required />
-      </label>
-      <label for="t_12">
-        12:00 - 13:00:
-        <input type="text" value="<%=t_12%>" name="t_12" required />
-      </label>
-      <label for="t_2">
-        14:00 - 15:00:
-        <input type="text" value="<%=t_2%>" name="t_2" required />
-      </label>
-      <label for="t_3">
-        15:00 - 16:00:
-        <input type="text" value="<%=t_3%>" name="t_3" required />
-      </label>
-      <label for="t_4">
-        16:00 - 17:00:
-        <input type="text" value="<%=t_4%>" name="t_4" required />
-      </label>
-      <label for="t_5">
-        17:00 - 18:00:
-        <input type="text" value="<%=t_5%>" name="t_5" required />
-      </label>
-      <button type="submit">Submit</button>
-    </form>
-    <button
-      style="
-        background-color: #282828;
-        border: 1px solid #fabd2f;
-        color: #ebdbb2;
-        padding: 20px 20px;
-        text-align: center;
-        font-size: 20px;
-        position: absolute;
-        top: 50px;
-        left: 80px;
+  <body>
+    <div id="dashboard">
+
+      <button 
+        style=
+        "position: absolute;
+        top:80px;
+        left:350px;
         border-radius: 10px;
-      "
-      onclick="window.location.href = '/super/portal';"
-    >
-      Back
-    </button>
+        width:150px;"
+        onclick="window.location.href = '/super/portal';">
+        Go Back
+      </button>
+
+      <div id="info"  style="float:none">
+      <form action="./s_time_table" method="POST">
+        <table border="0" cellpadding="15">
+          <tbody>
+            
+          <tr>
+          <td id="label">Serial Num</td>
+          <td>
+            <label disabled for="s_no">
+              <input disabled type="text" value="<%=s_no%>" name="s_no" required />
+            </label>
+          </td>
+          </tr>
+          
+          <tr>
+            <td id="label">Batch Code</td>
+            <td>
+              <label for="batch_code">
+                <input type="text" value="<%=batch_code%>" name="batch_code" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">Day</td>
+            <td>
+              <label for="day">
+                <input type="text" value="<%=day%>" name="day" required />
+              </label>
+            </td>
+          </tr>         
+
+          <tr>
+            <td id="label">09:00 - 10:00</td>
+            <td>
+              <label for="t_9">
+                <input type="text" value="<%=t_9%>" name="t_9" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">10:00 - 11:00</td>
+            <td>
+              <label for="t_10">
+                <input type="text" value="<%=t_10%>" name="t_10" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">11:00 - 12:00</td>
+            <td>
+              <label for="t_11">
+                <input type="text" value="<%=t_11%>" name="t_11" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">12:00 - 13:00</td>
+            <td>
+              <label for="t_12">
+                <input type="text" value="<%=t_12%>" name="t_12" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">14:00 - 15:00</td>
+            <td>
+              <label for="t_2">
+                <input type="text" value="<%=t_2%>" name="t_2" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">15:00 - 16:00</td>
+            <td>
+              <label for="t_3">
+                <input type="text" value="<%=t_3%>" name="t_3" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">16:00 - 17:00</td>
+            <td>
+              <label for="t_4">
+                <input type="text" value="<%=t_4%>" name="t_4" required />
+              </label>
+            </td>
+          </tr>
+
+          <tr>
+            <td id="label">17:00 - 18:00</td>
+            <td>
+              <label for="t_5">
+                <input type="text" value="<%=t_5%>" name="t_5" required />
+              </label>
+            </td>
+          </tr>
+
+
+
+          <tr>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+            </td>
+            <td style="text-align:center; padding: 20px 0 20px 0">
+              <button type="submit">Save Changes</button>
+            </td>
+            </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
   </body>
 </html>
